# Biosimulators_MASSpy

./: .all-contributorsrc  .dockerignore  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  README.md  biosimulators.json  pyproject.toml  requirements.txt  setup.py
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: ci.yml
biosimulators_masspy/: __init__.py  __main__.py  core.py  data_model.py
docs/: about.html  genindex.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js  tutorial.html
docs-src/: about.rst  conf.py  index.rst  installation.rst  tutorial.rst
docs/source/: biosimulators_masspy.html
scripts/: make_example_sim.py
tests/: requirements.txt  test_core_main.py  test_data_model.py  test_main.py
