[tool.poetry]
name = "biosimulators-masspy"
version = "0.1.0"
description = "BioSimulators-compliant command-line interface to the MassPY simulation program <https://masspy.readthedocs.io/>."
authors = ["Center for Reproducible Biomedical Modeling <info@biosimulators.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://masspy.readthedocs.io/"
repository = "https://github.com/biosimulators/Biosimulators_MassPy"
classifiers=[
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: MIT License',
        'Topic :: Scientific/Engineering :: Bio-Informatics',
    ]
keywords=['systems', 'biology', 'modeling', 'simulation']
exclude = ['tests', 'tests.*']

[tool.poetry.dependencies]
python = "^3.9"
biosimulators_utils = {version = "^0.1.151", extras = ["logging", "sbml"]}
cobra = "<= 0.23.0"
kisao = "^2.34"
libroadrunner = "<= 2.2.0"
lxml = "^4.5"
masspy = "^0.1.5"
numpy = "<= 1.22.0"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flakey = "^1.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs.dependencies]
pydata-sphinx-theme = "*"
sphinx = ">=1.8"

[tool.poetry.scripts]
biosimulators-masspy = 'biosimulators_masspy.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
